--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>アンケート3-2</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <title>アンケート3-2</title>
 </head>
 <body>
-<div id="container">
-
-<table class="image">
-<tr>
-<td rowspan="2"><img src="meiji_shokuiku3.png" alt="meiji_shokuiku3.png" width="360" height="1250">
-</td>
-
-<td>
-<img src="pattern3_three.png" alt="pattern3_three.png" width="650" height="480">
-</td>
-
-<tr>
-<td><img src="pattern3_all.png" alt="pattern3_all.png" width="710" height="580"></td>
-</tr>
-
-</table>
-
-</div>
+  <div id="container">
+    <table class="image">
+      <tr>
+        <td rowspan="2">
+          <img src="meiji_shokuiku3.png" alt="meiji_shokuiku3.png" width="360" height="1250">
+        </td>
+        <td>
+          <img src="pattern3_three.png" alt="pattern3_three.png" width="650" height="480">
+        </td>
+      <tr>
+        <td>
+          <img src="pattern3_all.png" alt="pattern3_all.png" width="710" height="580">
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
